--- a/build-dev/fin-products.html
+++ b/build-dev/fin-products.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css?4">
 
 </head>
 
@@ -149,10 +149,10 @@
     </header>
 
     <main class="site-content">
-      <section class="categories">
+      <section class="categories section">
         <div class="categories__hero" style="
-      --category-img-mobile: url(../assets/img/categories/fin-products.jpg);
-      --category-img-desktop: url(../assets/img/categories/fin-products.jpg);
+      --category-img-mobile: url(../assets/img/hero-bg/fin-products_mobile.jpg);
+      --category-img-desktop: url(../assets/img/hero-bg/fin-products.jpg);
     ">
           <div class="container">
             <div class="breadcrumbs">
@@ -169,104 +169,85 @@
                 </li>
               </ul>
             </div>
-
             <h1 class="categories__title title">Финансовые продукты</h1>
           </div>
         </div>
-        <div class="categories__list-wrap">
-          <div class="container">
-            <ul class="categories__list">
 
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Рассчетно-кассовое обслуживания</h3>
+        <div class="container">
+          <ul class="categories__list">
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Рассчетно-кассовое обслуживания</h3>
 
+                <p class="categories__item-desc">отдельные банковские счета</p>
 
-                  <p class="categories__item-desc">отдельные банковские счета</p>
-
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Кредитование</h3>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Кредитование</h3>
 
 
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Факторинг</h3>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Факторинг</h3>
 
 
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Финансирование <br> контрактов</h3>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Финансирование <br> контрактов</h3>
 
 
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Банковские <br> гарантии</h3>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Банковские <br> гарантии</h3>
 
 
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Зарплатные <br> проекты</h3>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Зарплатные <br> проекты</h3>
 
 
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="categories__item">
+              <a href="#" class="categories__item-link">
+                <h3 class="categories__item-title">Бухгалтерский учет <br> по&nbsp;контрактам в ГОЗ</h3>
 
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
+                <p class="categories__item-desc">раздельный учет</p>
 
-              <li class="categories__item">
-                <a href="#" class="categories__item-link">
-                  <h3 class="categories__item-title">Бухгалтерский учет <br> по&nbsp;контрактам в ГОЗ</h3>
-
-
-                  <p class="categories__item-desc">раздельный учет</p>
-
-
-                  <svg class="categories__item-arrow">
-                    <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                  </svg>
-                </a>
-              </li>
-
-            </ul>
-          </div>
+                <svg class="categories__item-arrow">
+                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -278,7 +259,6 @@
           </div>
         </div>
       </section>
-
     </main>
 
     <footer class="footer">
@@ -572,7 +552,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js?4"></script>
 </body>
 
 </html>
