--- a/build-dev/about-content.html
+++ b/build-dev/about-content.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css?4">
 
 </head>
 
@@ -151,7 +151,7 @@
     <main class="site-content">
       <section class="about-content">
         <div class="about-content__hero" style="
-      --category-img-mobile: url(../assets/img/about-content-bg.jpg);
+      --category-img-mobile: url(../assets/img/about-content-bg_mobile.jpg);
       --category-img-desktop: url(../assets/img/about-content-bg.jpg);
     ">
           <div class="container">
@@ -493,7 +493,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js?4"></script>
 </body>
 
 </html>
