--- a/build-dev/contacts.html
+++ b/build-dev/contacts.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css?4">
 
   <script src="https://api-maps.yandex.ru/2.1/?c14d3178-13f2-4774-9ead-d5ee054cf716&lang=ru_RU&" type="text/javascript"></script>
 </head>
@@ -166,7 +166,7 @@
               </li>
             </ul>
           </div>
-          <h1 class="contcts__title">Контакты</h1>
+          <h1 class="contacts__title title">Контакты</h1>
           <p class="contacts__company-type">Общество с ограниченной ответственностью</p>
           <p class="contacts__company-name">&laquo;Единая снабжающая компания&raquo;</p>
           <ul class="contacts__list">
@@ -553,7 +553,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js?4"></script>
 </body>
 
 </html>
