--- a/build-dev/fin-products-detail.html
+++ b/build-dev/fin-products-detail.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css?4">
 
 </head>
 
@@ -151,7 +151,7 @@
     <main class="site-content">
       <section class="fin-detail">
         <div class="detail-hero" style="
-    --hero-img-mobile: url('../assets/img/hero-bg/fin-products.jpg');
+    --hero-img-mobile: url('../assets/img/hero-bg/fin-products_mobile.jpg');
     --hero-img-desktop: url('../assets/img/hero-bg/fin-products.jpg');
   ">
           <div class="container">
@@ -527,7 +527,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js?4"></script>
 </body>
 
 </html>
