--- a/build-dev/privacy-policy.html
+++ b/build-dev/privacy-policy.html
@@ -12,7 +12,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css?4">
 
 </head>
 
@@ -205,7 +205,7 @@
             <p>Для защиты прав и законных интересов Администрации в связи с допущенными Пользователем нарушениями.</p>
             <p>5. Изменение Политики конфиденциальности</p>
             <p>5.1. Настоящая Политика может быть изменена или прекращена Администрацией в одностороннем порядке без предварительного уведомления Пользователя. Новая редакция Политики вступает в силу с момента ее размещения на Сайте, если иное не предусмотрено новой редакцией Политики.</p>
-            <p>5.2. Действующая редакция Политики находится на Сайте в сети Интернет по адресу./usloviya_ispolzovaniya_servisa/obrazec-politiki-konfidencialnosti-2017</p>
+
             <p>Действующая редакция Политики от __________ 20__ г.</p>
           </div>
         </div>
@@ -504,7 +504,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.js?4"></script>
 </body>
 
 </html>
